@@ -1,38 +1,58 @@
 package com.example.demo.service.User;
 
+import com.example.demo.dto.request.UserCreationRequest;
+import com.example.demo.dto.request.UserUpdateRequest;
 import com.example.demo.dto.response.UserResponse;
+import com.example.demo.entity.Roles;
+import com.example.demo.entity.User;
+import com.example.demo.exception.AppException;
+import com.example.demo.exception.ErrorCode;
 import com.example.demo.mapper.UserMapper;
+import com.example.demo.repository.Specification.RoleRepository;
 import com.example.demo.repository.Specification.UserRepository;
+import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
+import lombok.experimental.FieldDefaults;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.core.context.SecurityContext;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-import org.springframework.web.bind.annotation.RestController;
 
+import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
+@Slf4j
 public class UserServiceImpl implements UserService {
-    private final UserRepository userRepository;
+    UserRepository userRepository;
+    UserMapper userMapper;
+    RoleRepository roleRepository;
 
+    @PreAuthorize("hasRole('ADMIN')")
     @Override
     public List<UserResponse> getAllUsers() {
-        return userRepository.findAll()
-                .stream()
-                .map(UserMapper::toResponse)
-                .collect(Collectors.toList());
+        log.info("Getting all users");
+        List<User> users = userRepository.findAll();
+
+        return users.stream().map(userMapper::toUserResponse).toList();
     }
 
     @Override
     public UserResponse getUserById(String id) {
-        return userRepository.findById(id)
-                .map(UserMapper::toResponse)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+        return userMapper.toUserResponse(userRepository.findById(id).orElseThrow(()-> new RuntimeException("User not found")));
     }
 
     @Override
     public UserResponse getMyInfo() {
-        return null;
+        SecurityContext context = SecurityContextHolder.getContext();
+        String name = context.getAuthentication().getName();
+        User user = userRepository.findByUsername(name).orElseThrow(()-> new AppException(ErrorCode.USER_NOT_EXISTED));
+        return userMapper.toUserResponse(user);
     }
 
     @Override
@@ -41,5 +61,36 @@ public class UserServiceImpl implements UserService {
             throw new RuntimeException("User not found");
         }
         userRepository.deleteById(id);
+    }
+
+    @Override
+    public User CreateUser(UserCreationRequest reg) {
+        // Check tồn tại
+        if (userRepository.existsByUsername(reg.getUsername())) {
+            throw new AppException(ErrorCode.USER_EXISTED);
+        }
+
+        User user = userMapper.toUser(reg);
+        PasswordEncoder passwordEncoder = new BCryptPasswordEncoder(10);
+        user.setPassword(passwordEncoder.encode(reg.getPassword()));
+        //HashSet<String> roles = new HashSet<>();
+        //roles.add(Roles.USER.name());
+        //user.setRole(roles);
+        return userRepository.save(user);
+    }
+
+    @Override
+    public UserResponse UpdateUser(String id,UserUpdateRequest reg) {
+        User user = userRepository.findById(id).orElseThrow(()-> new RuntimeException("User not found"));
+       userMapper.updateUser(user, reg);
+
+        PasswordEncoder passwordEncoder = new BCryptPasswordEncoder(10);
+        user.setPassword(passwordEncoder.encode(reg.getPassword()));
+
+        var roles = roleRepository.findAllById(reg.getRoles());
+        user.setRoles(new HashSet<>(roles));
+       // user.setRole(roles);
+
+        return userMapper.toUserResponse(userRepository.save(user));
     }
 }
